--- a/GitProject/build.xml
+++ b/GitProject/build.xml
@@ -47,7 +47,7 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-        <target name="run" depends="jar">
+        <target name="run" depends="build">
         <java jar="build/jar/helloworld.jar" fork="true"/>
     </target>            
 </project>
