--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 language: java
-script: ant -buildfile ./GitProject/build.xml run
+before_install: ant -buildfile ./GitProject/build.xml run
 install:
 - docker build .
 - docker images -a
