--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ sudo: required
 services:
   - docker
 language: java
-before_install: ant -buildfile ./GitProject/build.xml run
-install:
-- docker build .
-- docker login -u pkondratiev -p l0govera cloud.docker.com
-- docker push 
+script: ant -buildfile ./GitProject/build.xml run
+after_success:
+- docker login -u "pkondratiev" -p "l0govera" cloud.docker.com
+- docker build -f Dockerfile -t <repository_name> .
+- docker push <repository_name>
